--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Rules</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="ASU SHARES CDS rule management utilities." />
+  <meta name="author" content="Preston Lee" />
+  <script src="assets/configuration.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
